--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Heroku
+name: Build and Deploy
 
 on:
   push:
@@ -6,44 +6,31 @@ on:
       - main
   workflow_dispatch:
 
-env:
-  NODE_ENV: production
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: 18
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+
+      - name: Run build
+        run: npm run build --if-present
 
       - name: Run tests
-        run: |
-          if npm run | grep -q test; then
-            npm test
-          else
-            echo "No tests"
-          fi
-
-      - name: Build (if build script exists)
-        run: |
-          if npm run | grep -q build; then
-            npm run build
-          else
-            echo "No build step"
-          fi
+        run: npm test --if-present
 
       - name: Deploy to Heroku
-      - uses: akhileshns/heroku-deploy@v4
+        uses: akhileshns/heroku-deploy@v4
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
           heroku_email: ${{ secrets.HEROKU_EMAIL }}
-          usedocker: false
