--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -9,12 +9,20 @@ on:
       - 'README.md'
   workflow_dispatch:
 
+# Add permissions at the workflow level
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Add concurrency to prevent multiple deployments
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
   deploy-docs:
     runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -22,6 +30,16 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Fetch all history for proper build
+    
+    - name: Setup Pages with Enablement
+      uses: actions/configure-pages@v4
+      with:
+        # This enables Pages if not already enabled
+        enablement: true
+        # Optional: specify static site generator (remove if not needed)
+        # static_site_generator: 'jekyll'
     
     - name: Build documentation
       run: |
@@ -37,39 +55,121 @@ jobs:
         <head>
             <title>heavens-above Documentation</title>
             <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <style>
-                body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; }
-                .container { max-width: 800px; margin: 0 auto; }
-                header { border-bottom: 2px solid #0366d6; padding-bottom: 20px; }
-                h1 { color: #0366d6; }
-                .file-list { background: #f6f8fa; padding: 20px; border-radius: 6px; margin: 20px 0; }
-                .file-item { padding: 8px 0; }
-                .timestamp { color: #586069; font-size: 14px; margin-top: 30px; }
+                body { 
+                    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; 
+                    margin: 0; 
+                    padding: 20px; 
+                    line-height: 1.6; 
+                    background: #f6f8fa;
+                }
+                .container { 
+                    max-width: 800px; 
+                    margin: 0 auto; 
+                    background: white;
+                    padding: 40px;
+                    border-radius: 12px;
+                    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+                }
+                header { 
+                    border-bottom: 3px solid #0366d6; 
+                    padding-bottom: 20px; 
+                    margin-bottom: 30px;
+                }
+                h1 { 
+                    color: #0366d6; 
+                    margin: 0;
+                    font-size: 2.5em;
+                }
+                .subtitle {
+                    color: #586069;
+                    font-size: 1.2em;
+                    margin-top: 10px;
+                }
+                .file-list { 
+                    background: #f6f8fa; 
+                    padding: 25px; 
+                    border-radius: 8px; 
+                    margin: 30px 0; 
+                    border-left: 4px solid #0366d6;
+                }
+                .file-item { 
+                    padding: 12px 0; 
+                    border-bottom: 1px solid #e1e4e8;
+                }
+                .file-item:last-child {
+                    border-bottom: none;
+                }
+                .file-item a {
+                    color: #0366d6;
+                    text-decoration: none;
+                    font-weight: 500;
+                    font-size: 1.1em;
+                }
+                .file-item a:hover {
+                    text-decoration: underline;
+                }
+                .timestamp { 
+                    color: #586069; 
+                    font-size: 14px; 
+                    margin-top: 40px;
+                    padding-top: 20px;
+                    border-top: 1px solid #e1e4e8;
+                    text-align: center;
+                }
+                .emoji {
+                    margin-right: 8px;
+                }
+                .actions-info {
+                    background: #dafbe1;
+                    border: 1px solid #2da44e;
+                    border-radius: 6px;
+                    padding: 16px;
+                    margin: 20px 0;
+                }
             </style>
         </head>
         <body>
             <div class="container">
                 <header>
-                    <h1>📚 heavens-above Documentation</h1>
-                    <p>Project documentation and resources</p>
+                    <h1>🚀 heavens-above</h1>
+                    <p class="subtitle">Project Documentation & Resources</p>
                 </header>
                 
+                <div class="actions-info">
+                    <strong>🤖 Automated Deployment:</strong> This site is automatically built and deployed using GitHub Actions.
+                </div>
+                
                 <div class="file-list">
-                    <h3>Available Documents:</h3>
+                    <h3>📚 Available Documents:</h3>
         EOF
         
-        # Add markdown files
+        # Add README.md first if it exists
+        if [ -f "README.md" ]; then
+            echo "<div class='file-item'><span class='emoji'>📖</span> <a href='README.md'>README.md</a> - Main project documentation</div>" >> _site/index.html
+            cp "README.md" _site/
+        fi
+        
+        # Add other markdown files
         for file in *.md; do
-          if [ -f "$file" ]; then
-            echo "<div class='file-item'>📄 <a href='$file'>$file</a></div>" >> _site/index.html
+          if [ -f "$file" ] && [ "$file" != "README.md" ]; then
+            echo "<div class='file-item'><span class='emoji'>📄</span> <a href='$file'>$file</a></div>" >> _site/index.html
             cp "$file" _site/
           fi
         done
         
         # Copy docs folder if exists
         if [ -d "docs" ]; then
-          echo "<div class='file-item'>📁 <a href='docs/'>docs/</a> (documentation folder)</div>" >> _site/index.html
+          echo "<div class='file-item'><span class='emoji'>📁</span> <a href='docs/'>docs/</a> - Documentation directory</div>" >> _site/index.html
           cp -r docs _site/
+        fi
+        
+        # Add GitHub workflow info if exists
+        if [ -d ".github/workflows" ]; then
+          echo "<div class='file-item'><span class='emoji'>⚙️</span> <a href='.github/workflows/'>GitHub Actions Workflows</a></div>" >> _site/index.html
+          mkdir -p _site/.github
+          cp -r .github/workflows _site/.github/ 2>/dev/null || true
         fi
         
         # Close HTML
@@ -77,8 +177,9 @@ jobs:
                 </div>
                 
                 <div class="timestamp">
-                    <p>Last updated: $(date)</p>
-                    <p>Built with GitHub Actions</p>
+                    <p><strong>Last updated:</strong> $(date -u '+%Y-%m-%d %H:%M:%S UTC')</p>
+                    <p><strong>Repository:</strong> <a href="https://github.com/${{ github.repository }}" target="_blank">${{ github.repository }}</a></p>
+                    <p>🔧 Built and deployed automatically with GitHub Actions</p>
                 </div>
             </div>
         </body>
@@ -86,10 +187,15 @@ jobs:
         EOF
         
         echo "✅ Documentation built successfully!"
-        ls -la _site/
+        echo "📁 Contents of _site directory:"
+        find _site -type f | sort
     
-    - name: Setup GitHub Pages
-      uses: actions/configure-pages@v4
+    - name: Show build results
+      run: |
+        echo "📊 Build summary:"
+        echo "Total files in _site: $(find _site -type f | wc -l)"
+        echo "Directory structure:"
+        tree _site || ls -la _site/
     
     - name: Upload to GitHub Pages
       uses: actions/upload-pages-artifact@v3
@@ -99,8 +205,23 @@ jobs:
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
+      # Add timeout for deployment
+      timeout-minutes: 5
     
     - name: Success message
+      if: success()
       run: |
-        echo "🎉 Documentation deployed to GitHub Pages!"
-        echo "📖 Visit: https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}"
+        echo "🎉 Documentation successfully deployed to GitHub Pages!"
+        echo "📖 Your site is now live at:"
+        echo "   https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}"
+        echo ""
+        echo "🔗 Direct link: ${{ steps.deployment.outputs.page_url }}"
+    
+    - name: Deployment failed notification
+      if: failure()
+      run: |
+        echo "❌ Documentation deployment failed!"
+        echo "Please check:"
+        echo "1. GitHub Pages is enabled in repository Settings → Pages"
+        echo "2. Repository has proper permissions"
+        echo "3. Build artifacts were created successfully"
